# simple-rag

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
etl_file/: MinerU_markdown_202605172227483_289840de.md
simple_rag/: simple.py  userui.py
