[project]
name = "simple-rag"
version = "0.1.0"
description = "A minimal RAG system using pgvector + Ollama"
requires-python = ">=3.10"
dependencies = [
    "psycopg>=3.2",
    "pgvector>=0.3",
    "requests>=2.31",
    "ollama>=0.4",
    "gradio>=4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]
